# myResources

./: MEGA-RECOVERYKEY.txt  token use as password
c++常用代码/: c++代码-命令行参数.odt  c++代码-耗时统计.odt  opencv读取yaml文件.odt
c++常用代码/yaml-cpp库读取yaml文件/: CMakeLists.txt  config.yaml  readme.md  yaml  yaml.cpp
c++相关/: .~lock.cmakelist简介.odt#  c++笔记.odt  cmakelist简介.odt  pkg-config简介.odt  动态库链接方式.odt
c++算法/: 卡尔曼滤波.odt
c++算法/arm_algorthm/arm_planning/: CMakeLists.txt
c++算法/arm_algorthm/arm_planning/include/arm_planning/: RRTConnect.h  armPlanning.h  armPlanningByOMPL.h  collisionDetect.h  inverseKinematics.h  kinematics.h  pathPlanningByOMPL.h  trajectoryPlanning.h
c++算法/arm_algorthm/arm_planning/src/: RRTConnect.cpp  armPlanning.cpp  armPlanningByOMPL.cpp  collisionDetect.cpp  hybridPositionForceControl.cpp  inverseKinematics.cpp  kinematics.cpp  pathPlanningByOMPL.cpp  test.cpp  trajectoryPlanning.cpp
c++算法/arm_algorthm/hand_eye_calibration/: hand_eye_calibration.py  手眼标定.odt
c++算法/arm_algorthm/hand_eye_calibration/hand_eye_calibration/: CMakeLists.txt  package.xml
c++算法/arm_algorthm/hand_eye_calibration/hand_eye_calibration/launch/: hand_eye_calibration.launch
c++算法/arm_algorthm/hand_eye_calibration/hand_eye_calibration/src/: hand_eye_calibration.cpp
c++算法/arm_algorthm/kinematics/include/: kinematics.h
c++算法/arm_algorthm/kinematics/src/: kinematics.cpp
c++算法/arm_planning/: .clang-format  CMakeLists.txt  RRTConnect.cpp  collisionDetect.cpp  trajectoryPlanning.cpp  visionTest.cpp
c++算法/arm_planning/config/: 111.txt  kinematics.yaml
c++算法/arm_planning/dependency/rm-arm/include/: rm_define.h
c++算法/arm_planning/dependency/rm-arm/lib/: libRM_Service.so.1.0.0
c++算法/arm_planning/include/arm_planning/: RRTConnect.h  forwardKinematics.hpp  getArmUdpData.hpp  gripperControl.hpp  hybridPositionForceControl.hpp  inverseKinematics.hpp  trajectoryPlanning.h
c++算法/arm_planning/src/: armPlanning.cpp  trajectoryPlanning.cpp  visionTest.cpp
c++算法/arm_planning/src/test/: arm_move_test.cpp  collisionDetect.cpp  communit_test.cpp  forceControlTest.cpp  kinematicsTest.cpp  rrtTest.cpp  trajectorytest.cpp
c++算法/handle_PointsCloud/: CMakeLists.txt  README.md  manifest.xml
c++算法/handle_PointsCloud/src/: handlePCDFile.cpp  transformationInRPYAndEulerAngel.cpp
c++算法/orb_slam2注释版/include/: Frame.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LoopClosing.h  Map.h  MapPoint.h  ORBmatcher.h  Sim3Solver.h  Tracking.h
c++算法/orb_slam2注释版/src/: Converter.cc  Frame.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  Sim3Solver.cc  Tracking.cc
c++算法/orb_slam3注释版/: orbslam3建图定位基于源码的更改.txt
git相关/: 创建pr.odt  配置ssh.odt
python/: 语法及常用库.odt
python相关/: .~lock.基本语法.odt#  .~lock.常用库.odt#  numpy库 .odt  pytorch库.odt  基本语法.odt  常用库.odt  常见问题.odt
python相关/ICPTest/: icp.py  readAndVisPointCloudFile.py
python相关/PCATest/: pca.py
ros相关/: CameraInfo消息.odt  cmakelists和package.xml编写.odt  roslaunch相关.odt  ros主从机通信.odt  ros代码模板.odt  ros指令.odt  ros问题汇总.odt
ros相关/ros_message_package/: CMakeLists.txt  package.xml
ros相关/ros_message_package/msg/: BehaviorState.msg  cte.msg
ros相关/ros_message_package/srv/: Event.srv
ubuntu相关/: .~lock.创建桌面快捷方式.odt#  nvidia驱动安装.odt  ubuntu屏幕拓展.odt  u盘格式化命令.odt  vnc设置.odt  创建桌面快捷方式.odt  图形显示系统架构.odt  常用指令.odt  常见问题.odt  开机自启动.odt  硬盘挂载、u盘格式化.odt
优化方法/: 因子图优化.odt  非线性最小二乘.odt
常见通信协议/: RS485和modbus.odt
强化学习/: value-based-learning.odt
操作系统/: linux内存管理.odt  linux操作系统启动流程.odt  linux文件系统.odt  linux进程调度odt
机器学习/: imitate.py  imitate_episodes.py  realRobot.py
机器学习/强化学习/: policy-based-learning .odt
概率论与数理统计/: 正态分布.odt  贝叶斯公式(先验后验概率).odt
点匹配方法/: 3D-2D匹配.odt  pnp.odt  利用单应矩阵求解.odt  利用対极约束求解.odt
线性代数/: SVD分解求AX=0  .odt  指数、对数映射及推导.odt  相似矩阵.odt
装机指南/: ubuntu装机.odt
计组原理/: 内存对齐.odt
