<?xml version="1.0"?>
<package format="2">
  <name>hand_eye_calibration</name>
  <version>0.0.0</version>
  <description>The hand_eye_calibration package</description>
  <maintainer email="wky@todo.todo">wky</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
